Migrate to external p2 director execution